tests/esproposal_class_static_fields.warn/esproposal_class_static_fields.warn.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Experimental class static field usage. Class static fields are an active early stage feature proposal that may change.
You may opt-in to using them anyway in Flow by putting `esproposal.class_static_fields=enable` into the `[options]`
section of your `.flowconfig`. [illegal-class-field]

   5|   static initOnly = 'asdf';
        ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:6:3

Experimental class static field usage. Class static fields are an active early stage feature proposal that may change.
You may opt-in to using them anyway in Flow by putting `esproposal.class_static_fields=enable` into the `[options]`
section of your `.flowconfig`. [illegal-class-field]

   6|   static initWithAnnotation: string = 'asdf';
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors
